HMAN-993: Prevent linked group processing from reverting status of a hearing (#654)
* HMAN-993: Prevent linked group processing from reverting status of a hearing

Changed processing of linked group responses to prevent status of a hearing being reverted to an older value.  This situation can occur when a synchronous response for a hearing is processed whilst waiting for a response from HMI for a linked group request (create, amend or delete) that includes the same hearing.

The processing of linked group responses has been changed so that only the linked group and order fields on a hearing are updated rather than - potentially - all fields.

* HMAN-993: Tidy up LinkedHearingGroupServiceTest

Removed openMocks() call and public modifier from setUp() in LinkedHearingGroupServiceTest.  Initialisation of mocks is handled by MockitoExtension annotation under JUnit5, so call to openMocks() is no longer needed.

* HMAN-993: Amended linked group test to use request id

Amended testCreateLinkedHearingGroup_LinkedGroupDetails() test in LinkedHearingGroupServiceIT class to use request id in comparison with value in hearing link group response.  It was mistakenly using the linked group id.

* HMAN-993: Changed entity manager type used by test class

Changed LinkedHearingGroupControllerMessageProcessorIT class to use jakarta.persistence.EntityManger.  This change was needed after incorporating Spring Boot 3 changes.

* HMAN-993: Add case hearing requests to all hearings in test data

Updated test data SQL scripts to include case hearing requests for all hearings.  This is to prevent "Cannot find latest case hearing request" errors if the hearing used to generate the linked hearing audit records happens to be one without a case hearing request.  Originally case hearing requests were only created for the first hearing in the test data as a shortcut.

* HMAN-993: Tidy and correct LinkHearingGroupControllerIT tests

- Changed class to use constructor for injecting beans.
- Replaced